# AI-Therapist

./: .gitignore  Details.md  pyproject.toml
AI-flow/graphs/: therapy_flow.py
AI-flow/guardrails/: input_moderation.py  pii_detection.py
AI-flow/memory/: memory_manager.py  short_term_memory.py  state.py
AI-flow/tools/: crisis_detector.py  emotions_analyzer.py  journal_tool.py
AIFlow/graphs/: therapy_flow.py
AIFlow/memory/: memory_manager.py  state.py
app/: package-lock.json  package.json  postcss.config.js
app/src/: App.tsx
app/src/components/: ChatBox.tsx
app/src/pages/: Chat.tsx  Login.tsx  OAuthCallback.tsx
backend/: main.py
backend/models/: models.py
backend/routes/: auth.py
backend/services/: auth_services.py  graph_services.py
backend/websocket_routes/: chat.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatBox.tsx
frontend/src/pages/: Chat.tsx  Login.tsx  OAuthCallback.tsx
src/: main.py
src/graphs/: therapy_flow.py
src/memory/: memory_manager.py
src/routes/: auth.py
src/services/: auth_services.py  graph_services.py
src/src/graphs/: therapy_flow.py
src/src/memory/: memory_manager.py
src/src/tools/: emotions_analyzer.py
src/tools/: crisis_detector.py
src/websocket_routes/: chat.py
supabase/migrations/: supabase_schema.sql
