[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[google-genai]>=0.3.25",
    "langchain-community>=0.3.24",
    "langgraph>=0.4.5",
    "litellm>=1.70.2",
    "sentence-transformers>=4.1.0",
    "langchain-huggingface>=0.2.0",
    "chromadb>=1.0.10",
    "supabase>=2.15.2",
    "fastapi>=0.115.9",
    "uvicorn>=0.34.2",
    "pydantic[email]>=2.11.4",
]
